fixed up general style for site to contain header better on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -322,11 +322,11 @@ main.index {
 .container {
 	display: flex;
 	margin-top: 5%;
-	margin-left: 10%;
+	margin-left: 5%;
+	margin-right: 5%;
 }
 .container .content {
 	flex-direction: column;
-	margin-right: 3%;
 }
 
 @media print, screen and (max-width: 960px) {
@@ -341,6 +341,9 @@ main.index {
 		background: var(
 			--bg
 		) !important; /* Ensure the background covers content behind */
+	}
+	header nav {
+		align-items: center;
 	}
 
 	body {
